# Proyecto_geometria

./: CMakeLists.txt
src/: CDS-P-ULTRAVISTA-color-KsJY~1.fits  catalogplot.py  clusters.csv  clusters2.csv  converter.py  fuentes_detectadas_canal0.csv  fuentes_detectadas_canal1.csv  fuentes_detectadas_canal2.csv  main.cpp
